--- a/ROHIT_SHEKHAWAT_HW1_solution.ipynb
+++ b/ROHIT_SHEKHAWAT_HW1_solution.ipynb
@@ -317,15 +317,58 @@
     "    while fraction > 0:\n",
     "        fraction = fraction * 2\n",
     "        if fraction >= 1:\n",
-    "            result += '1'\n",
-    "            fraction -= 1\n",
+    "            result = result + '1'\n",
+    "            fraction = fraction - 1\n",
     "        else:\n",
-    "            result += '0'\n",
+    "            result = result + '0'\n",
     "    if result == \"\":\n",
     "        result = \"0\"\n",
     "    return result\n",
     "\n",
     "def convertToIEEE(real):\n",
+    "    if real == 0:\n",
+    "        if str(real).startswith('-'):\n",
+    "            sign = 1\n",
+    "        else:\n",
+    "            sign = 0\n",
+    "        exponent_bin = \"\"\n",
+    "        for i in range(11):\n",
+    "            exponent_bin += '0'\n",
+    "        mantissa = \"\"\n",
+    "        for i in range(52):\n",
+    "            mantissa += '0'\n",
+    "        return sign, exponent_bin, mantissa\n",
+    "\n",
+    "    if real == float('inf'):\n",
+    "        sign = 0\n",
+    "        exponent_bin = \"\"\n",
+    "        for i in range(11):\n",
+    "            exponent_bin += '1'\n",
+    "        mantissa = \"\"\n",
+    "        for i in range(52):\n",
+    "            mantissa += '0'\n",
+    "        return sign, exponent_bin, mantissa\n",
+    "\n",
+    "    if real == float('-inf'):\n",
+    "        sign = 1\n",
+    "        exponent_bin = \"\"\n",
+    "        for i in range(11):\n",
+    "            exponent_bin += '1'\n",
+    "        mantissa = \"\"\n",
+    "        for i in range(52):\n",
+    "            mantissa += '0'\n",
+    "        return sign, exponent_bin, mantissa\n",
+    "\n",
+    "    if real != real:\n",
+    "        sign = 0\n",
+    "        exponent_bin = \"\"\n",
+    "        for i in range(11):\n",
+    "            exponent_bin += '1'\n",
+    "        mantissa = \"1\"\n",
+    "        for i in range(51):\n",
+    "            mantissa += '0'\n",
+    "        return sign, exponent_bin, mantissa\n",
+    "\n",
     "    if real < 0:\n",
     "        sign = 1\n",
     "        real = -real\n",
@@ -334,35 +377,55 @@
     "\n",
     "    int_part = int(real)\n",
     "    frac_part = real - int_part\n",
-    "    \n",
+    "\n",
     "    int_bin = \"\"\n",
-    "    if int_part == 0:\n",
+    "    while int_part > 0:\n",
+    "        int_bin = str(int_part % 2) + int_bin\n",
+    "        int_part = int_part // 2\n",
+    "\n",
+    "    if int_bin == \"\":\n",
     "        int_bin = \"0\"\n",
-    "    else:\n",
-    "        while int_part > 0:\n",
-    "            int_bin = str(int_part % 2) + int_bin\n",
-    "            int_part = int_part // 2\n",
     "\n",
     "    frac_bin = fractionToBinary(frac_part)\n",
-    "    \n",
-    "    total_bin = int_bin + '.' + frac_bin\n",
-    "    \n",
-    "    position_of_first_one = total_bin.find('1')\n",
-    "    if position_of_first_one == -1:\n",
-    "        position_of_first_one = 0\n",
-    "    \n",
-    "    exponent = (position_of_first_one - 1) + 1023\n",
-    "    exponent_bin = bin(exponent)[2:]\n",
-    "    \n",
-    "    mantissa = total_bin[position_of_first_one + 1:]\n",
-    "    \n",
-    "    if len(mantissa) < 52:\n",
-    "        for _ in range(52 - len(mantissa)):\n",
-    "            mantissa += '0'\n",
-    "    \n",
-    "    mantissa = mantissa[:52]\n",
     "\n",
-    "    return sign, exponent_bin.zfill(11), mantissa\n",
+    "    total_bin = int_bin + '.' + frac_bin\n",
+    "\n",
+    "    position_of_first_one = 0\n",
+    "    for i in range(len(total_bin)):\n",
+    "        if total_bin[i] == '1':\n",
+    "            position_of_first_one = i\n",
+    "            break\n",
+    "\n",
+    "    if int_bin == \"0\":\n",
+    "        position_of_first_one = 0\n",
+    "        for i in range(len(frac_bin)):\n",
+    "            if frac_bin[i] == '1':\n",
+    "                position_of_first_one = i + 1\n",
+    "                break\n",
+    "        exponent = 1 - position_of_first_one\n",
+    "    else:\n",
+    "        exponent = position_of_first_one - 1 + 1023\n",
+    "\n",
+    "    if exponent < 0:\n",
+    "        exponent = 0\n",
+    "\n",
+    "    exponent_bin = bin(exponent)[2:]\n",
+    "    while len(exponent_bin) < 11:\n",
+    "        exponent_bin = '0' + exponent_bin\n",
+    "\n",
+    "    if int_bin == \"0\":\n",
+    "        mantissa = frac_bin[position_of_first_one:]\n",
+    "    else:\n",
+    "        mantissa = total_bin[position_of_first_one + 1:]\n",
+    "\n",
+    "    while len(mantissa) < 52:\n",
+    "        mantissa = mantissa + '0'\n",
+    "\n",
+    "    if len(mantissa) > 52:\n",
+    "        mantissa = mantissa[:52]\n",
+    "\n",
+    "    return sign, exponent_bin, mantissa\n",
+    "\n",
     "\n",
     "\n",
     "\n",
